--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>taylor</title>
+    <title>raLITsa</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,8 +20,24 @@
                     <li><a href="#">contact</a></li>
                 </ul>
             </nav>
+            <div class="header-text">
+                <p>web developer</p>
+                <h1>hi, i am raLITsa</h1>
+            </div>
         </div>    
     </div>
-
+    <!-- --------------about------------------- -->
+    <div class="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="images/user.jpg">
+                </div>
+                <div class="about-col-2">
+                    <h1>about me</h1>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
