--- a/index.html
+++ b/index.html
@@ -34,7 +34,37 @@
                     <img src="images/user.jpg">
                 </div>
                 <div class="about-col-2">
-                    <h1>about me</h1>
+                    <h1 class="sub-title">about me</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur dictum consectetur. Phasellus at tempor sem, in blandit quam. In eget enim arcu. Donec maximus, elit eu vehicula euismod, enim purus facilisis nulla, nec mollis arcu purus nec ante. Fusce bibendum posuere felis, nec viverra sem imperdiet a. Proin ac sapien pulvinar, ullamcorper turpis quis, pretium turpis. Maecenas interdum, urna vitae rhoncus lobortis, ligula erat ullamcorper metus, sit amet condimentum.</p>
+                     <div class="tab-titles">
+                        <p class="tab-links active-link">skills</p>
+                        <p class="tab-links">experience</p>
+                        <p class="tab-links">education</p>
+                     </div>
+                     <div class="tab-contents">
+                        <ul>
+                            <li><span>UI/UX</span><br>designing web/app interfaces</li>
+                            <li><span>web development</span><br>web app development</li>
+                            <li><span>app development</span><br>building android/iOS apps</li>
+
+                        </ul>
+                     </div>
+                     <div class="tab-contents">
+                        <ul>
+                            <li><span>UI/UX</span><br>designing web/app interfaces</li>
+                            <li><span>web development</span><br>web app development</li>
+                            <li><span>app development</span><br>building android/iOS apps</li>
+
+                        </ul>
+                     </div>
+                     <div class="tab-contents">
+                        <ul>
+                            <li><span>UI/UX</span><br>designing web/app interfaces</li>
+                            <li><span>web development</span><br>web app development</li>
+                            <li><span>app development</span><br>building android/iOS apps</li>
+
+                        </ul>
+                     </div>
                 </div>
             </div>
         </div>
