--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <p class="tab-links">experience</p>
                         <p class="tab-links">education</p>
                      </div>
-                     <div class="tab-contents">
+                     <div class="tab-contents active-tab">
                         <ul>
                             <li><span>UI/UX</span><br>designing web/app interfaces</li>
                             <li><span>web development</span><br>web app development</li>
